# OpenGL_RubicCube_Stimulator-C-

./: CMakeLists.txt  README.md  core.cpp  core.h  main.cpp
